--- a/src/main/resources/templates/students-main.html
+++ b/src/main/resources/templates/students-main.html
@@ -10,6 +10,10 @@
 
 <div class="container mt-5">
     <h1>Students screen</h1>
+    <div th:each="el : ${students}" class="alert alert-info mt-2">
+        <h3 th:text="${el.second_name} + '   ' + ${el.patronymic}"/>
+        <a th:href="'/students/' + ${el.id}">More</a>
+        </div>
 </div>
 
 <div th:insert="blocks/footer :: footer"></div>
