--- a/src/main/resources/templates/students-main.html
+++ b/src/main/resources/templates/students-main.html
@@ -12,9 +12,14 @@
     <h1>Students screen</h1>
     <div th:each="el : ${students}" class="alert alert-info mt-2">
         <h3 th:text="${el.second_name} + '   ' + ${el.patronymic}"/>
-        <a th:href="'/students/' + ${el.id}">More</a>
+        <a th:href="'/students/' + ${el.id}" class="btn btn-warning">More</a>
+    </div>
 
-        </div>
+    <div class="container mt-5">
+        <p class="float-left">
+            <a href="/Students/add"> ZHOPA</a>
+        </p>
+    </div>
 </div>
 
 <div th:insert="blocks/footer :: footer"></div>
