--- a/src/main/resources/templates/students-edit.html
+++ b/src/main/resources/templates/students-edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Students screen</title>
+    <title>Edit</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
@@ -40,14 +40,16 @@
 </head>
 
 <div class="container mt-5 mp-5">
-    <h1>Add student</h1>
-    <form name="addStudentForm" action="/students/add" onsubmit="return validateForm()" method="post">
-        <input type="text" name="first_name" placeholder="Input first name" class="form-control"><br>
-        <input type="text" name="second_name" placeholder="Input second name" class="form-control"><br>
-        <input type="text" name="patronymic" placeholder="Input patronymic" class="form-control"><br>
-        <input type="number" name="balance" placeholder="Input student's balance" class="form-control"><br>
-        <button type="submit" class="btn btn-success">Add student</button>
-    </form>
+    <h1>Edit student</h1>
+    <div th:each="el : ${student}">
+        <form method="post">
+            <input type="text" th:value="${el.first_name}" name="first_name" placeholder="Input first name" class="form-control"><br>
+            <input type="text" th:value="${el.second_name}" name="second_name" placeholder="Input second name" class="form-control"><br>
+            <input type="text" th:value="${el.patronymic}" name="patronymic" placeholder="Input patronymic" class="form-control"><br>
+            <input type="number" th:value="${el.balance}" name="balance" placeholder="Input student's balance" class="form-control"><br>
+            <button type="submit" class="btn btn-success">Edit</button>
+        </form>
+    </div>
 </div>
 
 <div th:insert="blocks/footer :: footer"></div>
