Fixed list of students in students screen, fixed students-details.html added remove and edit buttons in students-edit & StudentsController Fixed login

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -8,6 +8,6 @@
             <a class="p-2 text-dark" href="/instructors">Instructors</a>
             <a class="p-2 text-dark" href="/students">Students</a>
         </nav>
-        <a class="btn btn-outline-primary" href="#">Sign up</a>
+        <a class="btn btn-outline-primary" href="/registration">Registration</a>
     </div>
 </div>
