--- a/src/main/resources/templates/instructors-main.html
+++ b/src/main/resources/templates/instructors-main.html
@@ -11,14 +11,15 @@
 <div class="container mt-5">
     <h1>Instructors screen</h1>
     <div th:each="el : ${instructors}" class="alert alert-info mt-2">
-        <h3 th:text="el.first_name"></h3>
-        <h3 th:text="el.second_name"></h3>
-        <h3 th:text="el.patronymic"></h3>
-        <h3 th:text="el.type_of_licence"></h3>
-        <a th:href="'/instructor/' + ${el.id}">More</a>
+        <h3 th:text="el.first_name+ '   ' + ${el.second_name}"></h3>
+        <h3 th:text="some number of lessons"></h3>
+        <a th:href="'/instructors/' + ${el.id}" class="btn btn-warning">More</a>
     </div>
 </div>
 
+<div class="container mt-5">
+    <a class="btn btn-secondary " href="/instructors/add" role="button">Add instructor</a>
+</div>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
 </html>
