--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,17 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${title}"/>
+    <title>Reservation screen</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-
 <header th:insert="blocks/header :: header"></header>
 
-<div class="container mt-5">
-    <h1>Home screen</h1>
-</div>
 
 <div th:insert="blocks/footer :: footer"></div>
 </body>
