--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,7 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example </title>
+    <title>Registration page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous" />
 </head>
 <body>
 <div th:if="${param.error}">
@@ -11,12 +16,23 @@
 <div th:if="${param.logout}">
     You have been logged out.
 </div>
-Add new user
 
-<form th:action="@{/registration}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
-</form>
+<div class="container-fluid text-center">
+    <form th:action="@{/registration.html}" method="post">
+        <div class="border border-secondary p-3 rounded">
+            <p>Create an account on crm site</p>
+            <p>
+                <input type="text" id="username" placeholder="Username" name="username" autofocus="autofocus" /> <br />
+            </p>
+            <p>
+                <input type="password" id="password" placeholder="Password" name="password" autofocus="autofocus" /> <br />
+            </p>
+            <p>
+                <input type="submit" value="Sign in" class="btn btn-primary" />
+            </p>
+        </div>
+
+    </form>
+</div>
 </body>
 </html>
