--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid text-center">
-    <form th:action="@{/login.html}" method="post">
+    <form th:action="@{/login}" method="post">
         <div th:if="${param.error}">
             <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
         </div>
