--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="container-fluid text-center">
-    <form th:action="@{/registration.html}" method="post">
+    <form th:action="@{/registration}" method="post">
         <div class="border border-secondary p-3 rounded">
             <p>Create an account on crm site</p>
             <p>
