--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,13 +1,13 @@
 <div th:fragment="header">
     <div class="d-flex flex-row flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal">Autoschool crm</h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal font-weight-bold">MAX autoschool</h5>
         <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="/">Home</a>
-            <a class="p-2 text-dark" href="/reservation">Reservation</a>
-            <a class="p-2 text-dark" href="/schedule">Schedule</a>
-            <a class="p-2 text-dark" href="/instructors">Instructors</a>
-            <a class="p-2 text-dark" href="/students">Students</a>
+            <a class="p-2 text-dark font-weight-bold" href="/">Home</a>
+            <a class="p-2 text-dark font-weight-bold" href="/reservation">Reservation</a>
+            <a class="p-2 text-dark font-weight-bold" href="/schedule">Schedule</a>
+            <a class="p-2 text-dark font-weight-bold" href="/instructors">Instructors</a>
+            <a class="p-2 text-dark font-weight-bold" href="/students">Students</a>
         </nav>
-        <a class="btn btn-outline-primary" href="/registration">Registration</a>
+        <a class="btn btn-outline-dark" href="/registration">Registration</a>
     </div>
 </div>
