--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -16,22 +16,50 @@
 <div th:if="${param.logout}">
     You have been logged out.
 </div>
-
+<!--
 <div class="container-fluid text-center">
     <form th:action="@{/registration}" method="post">
         <div class="border border-secondary p-3 rounded">
-            <p>Create an account on crm site</p>
+
+            <h5>Create an account on crm site</h5>
+
             <p>
                 <input type="text" id="username" placeholder="Username" name="username" autofocus="autofocus" /> <br />
             </p>
+
             <p>
                 <input type="password" id="password" placeholder="Password" name="password" autofocus="autofocus" /> <br />
             </p>
-            <p>
-                <input type="submit" value="Sign in" class="btn btn-primary" />
-            </p>
-        </div>
 
+            <p>
+                <input type="submit" value="Sign in" class="btn btn-primary mb-5"/>
+            </p>
+
+            <label>Role:</label>
+            <input type="radio" value="Student" />Student
+            <input type="radio"  value="Teacher" />Teacher<br/>
+
+        </div>
+    </form>
+</div>
+-->
+
+<div class="container-fluid text-center">
+    <form th:action="@{/registration}" method="post" th:object="${user}">
+        <h5>Create an account</h5>
+        <input type="text" th:field="*{username}" placeholder="Username" name="username" autofocus="autofocus"/> <br/>
+        <input type="text" th:field="*{password}" placeholder="Password" name="password" autofocus="autofocus"/> <br/>
+        <input type="text" th:field="*{email}" placeholder="Email" name="email" autofocus="autofocus"> <br/>
+        <input type="text" th:field="*{userFirstName}" placeholder="Your name" name="userFirstName" autofocus="autofocus"> <br/>
+        <input type="text" th:field="*{userSecondName}" placeholder="Your second name" name="userSecondName" autofocus="autofocus"> <br/>
+        <input type="text" th:field="*{userPatronymic}" placeholder="Your patronymic" name="userPatronymic" autofocus="autofocus"> <br/>
+        <select th:field="*{userRole}">
+            <option th:each="p : ${listRole}" th:value="${p}" th:text="${p}"/>
+        </select>
+        <br/>
+        <p>
+            <input type="submit" value="Submit" class="btn btn-primary mb-5"/>
+        </p>
     </form>
 </div>
 <a href="/login">Back to login</a>
