--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -53,7 +53,7 @@
         <input type="text" th:field="*{userFirstName}" placeholder="Your name" name="userFirstName" autofocus="autofocus"> <br/>
         <input type="text" th:field="*{userSecondName}" placeholder="Your second name" name="userSecondName" autofocus="autofocus"> <br/>
         <input type="text" th:field="*{userPatronymic}" placeholder="Your patronymic" name="userPatronymic" autofocus="autofocus"> <br/>
-        <select th:field="*{userRole}">
+        <select th:field="*{userRole}" name="userRole">
             <option th:each="p : ${listRole}" th:value="${p}" th:text="${p}"/>
         </select>
         <br/>
