--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<style type="text/css">
+    label {
+        display: inline-block;
+        width: 200px;
+        margin: 5px;
+        text-align: left;
+    }
+    input[type=text], input[type=password], select {
+        display: inline-block;
+        width: 200px;
+    }
+    input[type=checkbox] {
+        margin-center: 190px;
+    }
+    button {
+        padding: 5px;
+        margin: 10px;
+    }
+</style>
 <head>
     <title>Registration page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -44,15 +63,15 @@
 </div>
 -->
 
-<div class="container-fluid text-center">
+<div class="container-fluid text-center mt-2 mp-5 ">
     <form th:action="@{/registration}" method="post" th:object="${user}">
         <h5>Create an account</h5>
-        <input type="text" th:field="*{username}" placeholder="Username" name="username" autofocus="autofocus"/> <br/>
-        <input type="text" th:field="*{password}" placeholder="Password" name="password" autofocus="autofocus"/> <br/>
-        <input type="text" th:field="*{email}" placeholder="Email" name="email" autofocus="autofocus"> <br/>
-        <input type="text" th:field="*{userFirstName}" placeholder="Your name" name="userFirstName" autofocus="autofocus"> <br/>
-        <input type="text" th:field="*{userSecondName}" placeholder="Your second name" name="userSecondName" autofocus="autofocus"> <br/>
-        <input type="text" th:field="*{userPatronymic}" placeholder="Your patronymic" name="userPatronymic" autofocus="autofocus"> <br/>
+        <input type="text" th:field="*{username}" placeholder="Username" name="username" autofocus="autofocus"/> <br />
+        <input type="text" th:field="*{password}" placeholder="Password" name="password" autofocus="autofocus"/> <br />
+        <input type="text" th:field="*{email}" placeholder="Email" name="email" autofocus="autofocus"> <br />
+        <input type="text" th:field="*{userFirstName}" placeholder="Your name" name="userFirstName" autofocus="autofocus"> <br />
+        <input type="text" th:field="*{userSecondName}" placeholder="Your second name" name="userSecondName" autofocus="autofocus"> <br>
+        <input type="text" th:field="*{userPatronymic}" placeholder="Your patronymic" name="userPatronymic" autofocus="autofocus"> <br>
         <select th:field="*{userRole}" name="userRole">
             <option th:each="p : ${listRole}" th:value="${p}" th:text="${p}"/>
         </select>
