--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -3,7 +3,7 @@
         <h5 class="my-0 mr-md-auto font-weight-normal font-weight-bold">MAX autoschool</h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark font-weight-bold" href="/">Home</a>
-            <a class="p-2 text-dark font-weight-bold" href="/reservation">Reservation</a>
+            <a class="p-2 text-dark font-weight-bold" href="/group">Group</a>
             <a class="p-2 text-dark font-weight-bold" href="/schedule">Schedule</a>
             <a class="p-2 text-dark font-weight-bold" href="/instructors">Instructors</a>
             <a class="p-2 text-dark font-weight-bold" href="/students">Students</a>
