--- a/src/main/resources/templates/instructors-main.html
+++ b/src/main/resources/templates/instructors-main.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="container mt-5">
-    <a class="btn btn-secondary " href="/instructors/add" role="button">Add instructor</a>
+    <a class="btn btn-secondary " href="/registration" role="button">Add instructor</a>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
