--- a/src/main/resources/templates/students-add.html
+++ b/src/main/resources/templates/students-add.html
@@ -40,13 +40,16 @@
 </head>
 
 <div class="container mt-5 mp-5">
-    <h1>Add student</h1>
+    <h1>Add student to group</h1>
     <form name="addStudentForm" action="/students/add" onsubmit="return validateForm()" method="post">
         <input type="text" name="first_name" placeholder="Input first name" class="form-control"><br>
         <input type="text" name="second_name" placeholder="Input second name" class="form-control"><br>
         <input type="text" name="patronymic" placeholder="Input patronymic" class="form-control"><br>
         <input type="number" name="balance" placeholder="Input student's balance" class="form-control"><br>
-        <button type="submit" class="btn btn-success">Add student</button>
+<!--        <select>-->
+<!--            <option th:each="p : ${groupsList}" th:value="${p.id}" th:text="p.group_name"></option>-->
+<!--        </select><br>-->
+        <button type="submit" class="btn btn-success mt-3">Add student</button>
     </form>
 </div>
 
