--- a/src/main/resources/templates/students-details.html
+++ b/src/main/resources/templates/students-details.html
@@ -41,7 +41,7 @@
 </head>
 
 <div class="container mt-5">
-    <div th:each="el : ${student}" class="alert alert-info mt-2"> <!-- Такой же как и в контроллере -->
+    <div th:each="el : ${student}" class="alert alert-dark mt-2"> <!-- Такой же как и в контроллере -->
         <p th:text="${el.first_name}"/>
         <p th:text="${el.second_name}"/>
         <p th:text="${el.patronymic}"/>
@@ -54,7 +54,7 @@
 </div>
 
 <div class="container mt-5">
-    <a class="btn btn-secondary " href="/students/add" role="button">Add student</a>
+    <a class="btn btn-secondary " href="/students/add" role="button">Edit student</a>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
