--- a/src/main/resources/templates/students-details.html
+++ b/src/main/resources/templates/students-details.html
@@ -6,6 +6,11 @@
     <title>Students screen</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+    body{
+    background: #F5F7FA;
+    }
+</style>
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
@@ -43,16 +48,16 @@
 
 <div class="container mt-5">
     <div th:each="el : ${student}" class="alert alert-dark mt-2"> <!-- Такой же как и в контроллере -->
-        <p th:text="${el.first_name}"/>
-        <p th:text="${el.second_name}"/>
-        <p th:text="${el.patronymic}"/>
-        <p th:text="${el.balance}"/>
-        <a class="nav-item" sec:authorize="hasAnyRole('ADMIN','TEACHER')">
+        <p th:text="'Name: ' + ${el.first_name}"/>
+        <p th:text="'Second name: ' + ${el.second_name}"/>
+        <p th:text="'Patronymic: ' + ${el.patronymic}"/>
+        <p th:text="'Balance: ' + ${el.balance}"/>
+<!--        <a class="nav-item" sec:authorize="hasAnyRole('ADMIN','TEACHER')">-->
             <a th:href="'/students/' + ${el.id} + '/edit'" class="btn btn-warning">Edit</a><br><br>
             <form th:action="'/students/' + ${el.id} + '/delete'" method="post">
-                <button class="btn btn-warning" type="submit">Delete</button>
+                <button class="btn btn-outline-dark" type="submit">Delete</button>
             </form>
-        </a>
+<!--        </a>-->
     </div>
 </div>
 
