--- a/src/main/resources/templates/students-add.html
+++ b/src/main/resources/templates/students-add.html
@@ -4,6 +4,11 @@
     <title>Students screen</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+    body{
+    background: #F5F7FA;
+    }
+</style>
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
@@ -49,7 +54,7 @@
 <!--        <select>-->
 <!--            <option th:each="p : ${groupsList}" th:value="${p.id}" th:text="p.group_name"></option>-->
 <!--        </select><br>-->
-        <button type="submit" class="btn btn-success mt-3">Add student</button>
+        <button type="submit" class="btn btn-outline-dark mt-3">Add student</button>
     </form>
 </div>
 
