--- a/src/main/resources/templates/instructors-main.html
+++ b/src/main/resources/templates/instructors-main.html
@@ -4,15 +4,20 @@
     <title>Instructors screen</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+    body{
+    background: #F5F7FA;
+    }
+</style>
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container mt-5">
     <h1>Instructors screen</h1>
-    <div th:each="el : ${instructors}" class="alert alert-info mt-5">
+    <div th:each="el : ${instructors}" class="alert alert-dark mt-5">
         <h3 th:text="${el.first_name} + '    ' + ${el.second_name}"/>
-        <a th:href="'/instructors/' + ${el.id}" class="btn btn-warning">More</a>
+        <a th:href="'/instructors/' + ${el.id}" class="btn btn-outline-dark">More</a>
     </div>
 
 </div>
