--- a/src/main/resources/templates/lesson-main.html
+++ b/src/main/resources/templates/lesson-main.html
@@ -5,21 +5,31 @@
     <title>Lessons</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+    body{
+    background: #F5F7FA;
+    }
+</style>
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container ml-10">
     <h3>List of lessons</h3>
-    <div th:each="g: ${groups}">
-        <h5 th:text="${g.group_name}"/>
-    </div>
-    <div th:each="el: ${lesson}" class="alert alert-dark mt-5" >
-        <H5 th:text="${el.date}"/>
-        <h5 th:text="${el.startTime}"/>
+    <script>
+
+    </script>
+    <div th:each="el: ${lesson}" class="alert alert-dark mt-5">
+        <div th:each="g: ${groups}">
+            <span th:if="${g.id} == ${el.myGroup}">
+                <h5 th:text ="${g.group_name}"/>
+                <h5 th:text="${el.date}"/>
+                <h5 th:text="${el.startTime}"/>
+            </span>
+        </div>
     </div>
 
-    <a class="btn btn-outline-dark" sec:authorize="hasAnyRole('ADMIN','TEACHER')" href="/lesson/add">Add lesson</a>
+ <a class="btn btn-outline-dark"  href="/lesson/add">Add lesson</a> <!--   sec:authorize="hasAnyRole('ADMIN','TEACHER')"-->
 </div>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
