--- a/src/main/resources/templates/profile-main.html
+++ b/src/main/resources/templates/profile-main.html
@@ -6,6 +6,11 @@
     <title>Profile</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+    body{
+    background: #F5F7FA;
+    }
+</style>
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
@@ -21,7 +26,7 @@
                     <th>Date</th>
                     <th>Start Time</th>
                     <th>Stop Time</th>
-                    <td>Description</td>
+                    <th>Description</th>
                 </tr>
                 </thead>
                 <tbody>
