--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,8 +53,8 @@
                          height="100" width="100"/></a>
             </div>
             <div class="ml-3">
-                <a href="/schedule" class="text-dark">SCHEDULE</a>
-                <br><p class="Home_description">Click on icon to go to the schedule page</p>
+                <a href="/schedule" class="text-dark">LESSONS</a>
+                <br><p class="Home_description">Click on icon to go to the lessons page</p>
             </div>
         </div>
     </div>
