--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -11,9 +11,9 @@
                 <a class="p-2 text-dark fond-weight-bold" href="/users">Users</a>
             </a>
             <a class="p-2 text-dark font-weight-bold" href="/">Home</a>
-            <a class="nav-item" sec:authorize="hasAnyRole('ADMIN','TEACHER')">
+<!--            <a class="nav-item" sec:authorize="hasAnyRole('ADMIN','TEACHER')">-->
                 <a class="p-2 text-dark font-weight-bold" href="/group">Group</a>
-            </a>
+<!--            </a>-->
             <a class="p-2 text-dark font-weight-bold" href="/lesson">Lessons</a>
             <a class="p-2 text-dark font-weight-bold" href="/instructors">Instructors</a>
             <a class="p-2 text-dark font-weight-bold" href="/students">Students</a>
